@startuml Design Class Diagram for models

namespace Rally.Models {
    class User {
        + Id: string
        + Email: string
        + Password: string
        + Tracks: ICollection<Track>
    }

    class Track {
        + Id: int
        + Name: string
        + Comment: string
        + Location: string
        + Date: DateTime
        + UserId: string
        + User: User
        + CategoryId: int
        + Category: Category
        + Signs: ICollection<Sign>
    }

    class Sign {
        + Id: int
        + SignNumber: int
        + XCoordinate: string
        + YCoordinate: string
        + Rotation: string
        + SignBaseId: int
        + SignBase: SignBase
        + TrackId: int
        + Track: Track
        + EquipmentId: int
        + Equipment: Equipment
    }

    class Equipment {
        + Id: int
        + XCoordinate: string
        + YCoordinate: string
        + Rotation: string
        + EquipmentBaseId: int
        + EquipmentBase: EquipmentBase
    }

    class EquipmentBase {
        + Id: int
        + Image: byte[]
        + SignBases: ICollection<SignBase>
        + Equipments: ICollection<Equipment>
    }

    class SignBase {
        + Id: int
        + Description: string
        + Image: byte[]
        + EquipmentBaseId: int
        + EquipmentBase: EquipmentBase
        + CategoryId: int
        + Category: Category
    }

    class Category {
        + Id: int
        + Name: string
        + Rules: string
        + Tracks: ICollection<Track>
        + SignBases: ICollection<SignBase>
    }

    User "1" -- "0..*" Track
    Track "0..*" -- "1" Category
    Track "1" -- "0..*" Sign
    Sign "0..*" -- "1" SignBase
    Sign "1" -- "1" Equipment
    Equipment "0..*" -- "1" EquipmentBase
    SignBase "0..*" -- "1" EquipmentBase
    Category "1" -- "0..*" SignBase

}

@enduml